--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -21,3 +9,30 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*/.idea/workspace.xml
+*.log
+*.log.*
+*.iml
+*.iws
+*.ipr
+.project
+.classpath
+*.class
+classes/
+bin/
+log/
+.settings/
+.idea/
+target/
+npm-debug.log
+
+# bower and node dependencies
+bower_components
+node_modules
+dist
+*.bundle.css
+*.bundle.js
+index.develop
+index.production
+.idea/artifacts/monitor_web_war_exploded.xml
+.idea/workspace.xml
